--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
+    volumes:
+      - ma:/mariadb
   wordpress:
     container_name: wordpress
     build: ./requirements/wordpress
@@ -20,7 +22,8 @@ services:
       - wp:/var/www/aamhamdi/html
     depends_on:
       - wordpress
-  
 volumes:
   wp :
+    driver : local
+  ma :
     driver : local
