--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,10 @@
 
 
-MYSQL_DATABASE=
-MYSQL_USER=user1
-MYSQL_PASSWORD=root
+SQL_DB=wordpress
+SQL_USER=myuser
+SQL_PASS=root
+
+
+WP_USER=aamhamdi
+WP_PASS=Root123@&&33
+WP_MAIL=example@gmail.com
