--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,20 +4,27 @@ services:
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
+    image: mariadb
     volumes:
       - ma:/mariadb
+    env_file:
+      - .env
   wordpress:
     container_name: wordpress
     build: ./requirements/wordpress
+    image: wordpress
     volumes:
-      - wp:/var/www/aamhamdi/html
+      - wp:/var/www/aamhamdi/html/
     depends_on:
       - mariadb
+    env_file:
+      - .env
   nginx:
     container_name: nginx
     build: ./requirements/nginx
+    image: nginx
     ports:
-      - 8081:8081
+      - 443:443
     volumes:
       - wp:/var/www/aamhamdi/html
     depends_on:
@@ -27,3 +34,4 @@ volumes:
     driver : local
   ma :
     driver : local
+
