--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,15 +5,13 @@ WORKDIR /wordpress
 
 COPY . .
 
-RUN apt -y update; apt -y install curl php php-mysql php-fpm mariadb-client
+RUN apt -y update; apt -y install curl php php-mysql php-fpm mariadb-client iputils-ping
 
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp
-RUN wp core download --allow-root
-
 RUN sed -i 's/^listen =.*/listen = 9000/' /etc/php/8.2/fpm/pool.d/www.conf
-
 RUN chmod +x ./conf/setup.sh
+RUN wp core download --allow-root
 
 CMD [ "./conf/setup.sh" ]
