--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,71 +1,86 @@
-version: '3.8'
+version: '3.9'
 
 services:
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
-    image: mariadb
+    image: mariadb:aamhamdi
     volumes:
       - ma:/var/lib/mysql
+    networks:
+      - inception
     env_file:
       - .env
+    restart: always
   wordpress:
     container_name: wordpress
     build: ./requirements/wordpress
-    image: wordpress
+    image: wordpress:aamhamdi
     volumes:
-      - wp:/var/www/wordpress/html/
+      - wp:/var/www/wordpress
+    networks:
+      - inception
     depends_on:
       - mariadb
     env_file:
       - .env
+    restart: always
   nginx:
     container_name: nginx
     build: ./requirements/nginx
-    image: nginx
+    image: nginx:aamhamdi
     ports:
       - 443:443
       - 8080:8080
       - 8081:8081
     volumes:
-      - wp:/var/www/wordpress/html
+      - wp:/var/www/wordpress
+    networks:
+      - inception
     depends_on:
       - wordpress
-  redis:
-    container_name: redis
-    build: ./requirements/bonus/redis
-    image: redis 
-  ftp:
-    container_name: ftp
-    build: ./requirements/bonus/ftp
-    image: ftp
-    ports:
-      - 21:21
-    env_file:
-      - .env
-  adminer:
-    container_name: adminer
-    build: ./requirements/bonus/adminer
-    ports:
-      - 80:80
-    image: adminer
-  website:
-    container_name: website
-    build: ./requirements/bonus/website
-    image: website
-    ports:
-      - 3000:3000
+    restart: always
+  # redis:
+  #   container_name: redis
+  #   build: ./requirements/bonus/redis
+  #   image: redis 
+  # ftp:
+  #   container_name: ftp
+  #   build: ./requirements/bonus/ftp
+  #   image: ftp
+  #   ports:
+  #     - 21:21
+  #   env_file:
+  #     - .env
+  # adminer:
+  #   container_name: adminer
+  #   build: ./requirements/bonus/adminer
+  #   ports:
+  #     - 80:80
+  #   image: adminer
+  # website:
+  #   container_name: website
+  #   build: ./requirements/bonus/website
+  #   image: website
+  #   ports:
+  #     - 3000:3000
 volumes:
   wp :
+    name: wp
     driver : local
     driver_opts:
       type: none
       device: /home/aamhamdi/data/wp
       o: bind
   ma :
+    name : ma
     driver : local
     driver_opts:
       type: none
       device: /home/aamhamdi/data/ma
       o: bind
 
+networks:
+  inception:
+    name : inception
+    driver : bridge
