[fix issues & add cadvisor]

--- a/srcs/.env
+++ b/srcs/.env
@@ -6,9 +6,9 @@ SQL_PASS=root
 
 
 WP_USER=aamhamdi
-WP_PASS=Root123@&&33
+WP_PASS=root
 WP_MAIL=example@gmail.com
 
 
-FTP_USER=myuser
+FTP_USER=aamhamdi
 FTP_PASS=root
