--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,11 +1,11 @@
 
-FROM debian
+FROM debian:bullseye
 
 WORKDIR /ftp
 
 
 RUN apt -y update
-RUN apt -y install vsftpd
+RUN apt -y install vsftpd --no-install-recommends
 
 COPY . .
 RUN chmod u+x conf/setup.sh
