--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.9'
 
 services:
+
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
@@ -12,6 +13,7 @@ services:
     env_file:
       - .env
     restart: always
+
   wordpress:
     container_name: wordpress
     build: ./requirements/wordpress
@@ -25,45 +27,85 @@ services:
     env_file:
       - .env
     restart: always
+
   nginx:
     container_name: nginx
     build: ./requirements/nginx
     image: nginx:aamhamdi
     ports:
       - 443:443
-      - 8080:8080
+      - 8082:8082
       - 8081:8081
     volumes:
       - wp:/var/www/wordpress
+      - ad:/var/www/adminer
     networks:
       - inception
     depends_on:
       - wordpress
     restart: always
-  # redis:
-  #   container_name: redis
-  #   build: ./requirements/bonus/redis
-  #   image: redis 
-  # ftp:
-  #   container_name: ftp
-  #   build: ./requirements/bonus/ftp
-  #   image: ftp
-  #   ports:
-  #     - 21:21
-  #   env_file:
-  #     - .env
-  # adminer:
-  #   container_name: adminer
-  #   build: ./requirements/bonus/adminer
-  #   ports:
-  #     - 80:80
-  #   image: adminer
-  # website:
-  #   container_name: website
-  #   build: ./requirements/bonus/website
-  #   image: website
-  #   ports:
-  #     - 3000:3000
+
+  redis:
+    container_name: redis
+    build: ./requirements/bonus/redis
+    image: redis 
+    networks:
+      - inception
+    restart : always
+
+  ftp:
+    container_name: ftp
+    build: ./requirements/bonus/ftp
+    image: ftp
+    ports:
+      - 21:21
+    volumes:
+      - wp:/home/aamhamdi/ftp
+    env_file:
+      - .env
+    restart : always
+    networks:
+      - inception
+
+  adminer:
+    container_name: adminer
+    build: ./requirements/bonus/adminer
+    ports:
+      - 80:80
+    image: adminer
+    networks:
+      - inception
+    depends_on:
+      - mariadb
+    volumes:
+      - ad:/var/www/adminer
+    restart : always
+  
+  website:
+    container_name: website
+    build: ./requirements/bonus/website
+    image: website
+    ports:
+      - 3000:3000
+    networks:
+      - inception
+    restart : always
+
+  cadvisor:
+    container_name: cadvisor
+    build : ./requirements/bonus/cadvisor
+    image : cadvisor:aamhamddi
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    ports:
+      - 8080:8080
+    networks:
+      - inception
+    restart: always
+
 volumes:
   wp :
     name: wp
@@ -79,6 +121,8 @@ volumes:
       type: none
       device: /home/aamhamdi/data/ma
       o: bind
+  ad :
+    name : ad
 
 networks:
   inception:
