--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,17 +1,18 @@
 
 FROM debian:bullseye
 
-WORKDIR /wordpress
 
 RUN apt-get -y update
 RUN apt-get -y install curl php php-mysql php-fpm mariadb-client redis ca-certificates --no-install-recommends
+
+WORKDIR /var/www/wordpress
 
 RUN sed -i 's/^listen =.*/listen = 9000/' /etc/php/7.4/fpm/pool.d/www.conf; \
 curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar; \
 chmod +x wp-cli.phar; mv wp-cli.phar /usr/local/bin/wp; wp core download --allow-root
 
-COPY . .
+COPY . /nginx
 
-RUN chmod +x ./conf/setup.sh
+RUN chmod +x /nginx/conf/setup.sh
 
-CMD [ "./conf/setup.sh" ] 
+CMD [ "/nginx/conf/setup.sh" ] 
