--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
 
 
 SQL_DB=wordpress
-SQL_USER=myuser
+SQL_USER=aamhamdi
 SQL_PASS=root
 
 
@@ -9,7 +9,7 @@ WP_USER=aamhamdi
 WP_PASS=root
 WP_MAIL=example@gmail.com
 
-HOST_NAME=www.aamhamdi.42.fr
+HOST_NAME=aamhamdi.42.fr
 
 
 FTP_USER=aamhamdi
