--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,8 +11,8 @@ RUN sed -i 's/^listen =.*/listen = 9000/' /etc/php/7.4/fpm/pool.d/www.conf; \
 curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar; \
 chmod +x wp-cli.phar; mv wp-cli.phar /usr/local/bin/wp; wp core download --allow-root
 
-COPY . /nginx
+COPY . /wordpress
 
-RUN chmod +x /nginx/conf/setup.sh
+RUN chmod +x /wordpress/conf/setup.sh
 
-CMD [ "/nginx/conf/setup.sh" ] 
+CMD [ "/wordpress/conf/setup.sh" ] 
