--- a/srcs/.env
+++ b/srcs/.env
@@ -7,7 +7,11 @@ SQL_PASS=root
 
 WP_USER=aamhamdi
 WP_PASS=root
-WP_MAIL=example@gmail.com
+WP_MAIL=aamhamdi@gmail.com
+
+WP_USER1=aamhamdi1
+WP_PASS1=root
+WP_MAIL1=aamhamdi1@gmail.com
 
 HOST_NAME=aamhamdi.42.fr
 
